--- a/wearable/src/main/AndroidManifest.xml
+++ b/wearable/src/main/AndroidManifest.xml
@@ -30,4 +30,12 @@
             android:value="@integer/google_play_services_version" />
     </application>
 
+    <service android:name=".DataLayerListenerService">
+        <intent-filter>
+            <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+            <data android:scheme="wear" android:host="*"
+                android:path="/start-activity" />
+        </intent-filter>
+    </service>
+
 </manifest>
