--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-MyOpenWeatherMapApiKey= "156fb44edb72106fa4f9ea11adbceafa"
+MyOpenWeatherMapApiKey= "replace with your API key"
